# Bentoudev.dataclass

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: python-ci.yml  python-deploy-manual.yml
bentoudev/dataclass/: _version.py  base.py  json_schema.py  yaml_loader.py
tests/: test_json_schema.py  test_load_dataclass.py
